--- a/css/screen-header.css
+++ b/css/screen-header.css
@@ -3,6 +3,7 @@
   padding: 30px;
   justify-content: space-between;
   align-items: center;
+  margin: 30px 0px 0px 0px;
 }
 .screen-header__tilte {
   font-size: xx-large;
