--- a/css/style.css
+++ b/css/style.css
@@ -7,10 +7,18 @@
 @import "screen-header.css";
 @import "friend.css";
 @import "user-component.css";
+@import "find.css";
+@import "more.css";
+@import "settings.css";
+@import "message.css";
 body {
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
     Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
 }
 input:focus {
   outline: none;
+}
+:root {
+  --recommended-border: 1px solid rgba(0, 0, 0, 0.2);
+  --font-color: rgba(0, 0, 0, 0.5);
 }
