--- a/css/login-form.css
+++ b/css/login-form.css
@@ -14,6 +14,7 @@
 }
 
 #Login-form input:nth-child(3) {
+  border-bottom: none;
   margin-top: 40px;
   border-radius: 7px;
 }
@@ -25,17 +26,19 @@
 #Login-form input:focus {
   border-color: rgba(0, 0, 0, 0.5);
 }
-#Login-form input:nth-child(3):hover {
-  border-bottom: 1px solid rgba(0, 0, 0, 0.5);
-}
+
 #Login-form input[type="submit"] {
   background-color: rgb(245, 221, 88);
   cursor: pointer;
+  transition: all 0.3s ease-in-out;
 }
+
 #Login-form input[type="submit"]:hover {
   color: gray;
   background-color: rgb(243, 229, 147);
+  opacity: 0.7;
 }
+
 #Login-form a {
   text-align: center;
   text-decoration: none;
