--- a/css/more.css
+++ b/css/more.css
@@ -35,9 +35,9 @@
   margin-left: 10px;
 }
 .more-letterpress-weather__main-deg {
-  height: 3px;
-  width: 3px;
-  border-radius: 1.5px;
+  height: 4px;
+  width: 4px;
+  border-radius: 2px;
   background-color: black;
   position: absolute;
   left: 120px;
@@ -56,10 +56,6 @@
   display: flex;
   margin-top: 20px;
 }
-.more-letterpress-weather__icons-dog {
-  width: 70px;
-  height: 60px;
-}
 .more-letterpress-weather__header-2 {
   display: flex;
   margin: 0px 25px;
@@ -69,12 +65,36 @@
   display: flex;
   cursor: pointer;
 }
+
+@keyframes dogTurn {
+  0% {
+    transform: rotateY(0);
+  }
+  25% {
+    transform: rotateY(90deg);
+  }
+  50% {
+    transform: rotateY(180deg);
+  }
+  75% {
+    transform: rotateY(270deg);
+  }
+  100% {
+    transform: rotateY(360deg);
+  }
+}
+
 .more-letterpress-weather__icons-dog {
+  width: 70px;
+  height: 60px;
+  animation: dogTurn 1s ease-in-out infinite;
+}
+/* .more-letterpress-weather__icons-dog {
   transition: all 0.3s ease-in-out;
 }
 .more-letterpress-weather__icons-dog:hover {
   transform: rotate(360deg);
-}
+} */
 .nav__link-more i {
   color: var(--font-color);
 }
