--- a/css/style.css
+++ b/css/style.css
@@ -11,6 +11,8 @@
 @import "more.css";
 @import "settings.css";
 @import "message.css";
+@import "no-mobile.css";
+
 body {
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
     Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
@@ -21,4 +23,8 @@ input:focus {
 :root {
   --recommended-border: 1px solid rgba(0, 0, 0, 0.2);
   --font-color: rgba(0, 0, 0, 0.5);
+}
+
+abbr {
+  text-decoration: none;
 }
