--- a/css/style.css
+++ b/css/style.css
@@ -16,6 +16,7 @@
 body {
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
     Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  height: 100%;
 }
 input:focus {
   outline: none;
